--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <HTML>
-  <title>StreamerDex - Build your Network!</title>
+  <meta>
+    <title>StreamerDex - Build your Network!</title>
+  </meta>
+  <head>
+  </head>
   <body>
   </body>
-</HTML>  
+</HTML>
