--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-<HTML>
-  <meta>
-    <title>StreamerDex - Build your Network!</title>
-  </meta>
+<!DOCTYPE html>
+<html>
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>StreamerDex - Build your Network!</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
-    Test
+    Main Page
   </body>
-</HTML>
+</html>
