--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
-    Main Page
+    <div class="container">
+      <include src="./navbar.html"></include>
+    </div>
+    <div class="container">
+      Main Page
+    </div>
   </body>
 </html>
