--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>StreamerDex - Build your Network!</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="js/bootstrap.min.js" rel="stylesheet">
+
+    <script>
+      $(function(){
+        $("#includedContent").load("b.html");
+      });
+    </script>
   </head>
   <body>
-    <div class="container">
-      <include src="./navbar.html"></include>
+    <div class="container" id="includedContent">
     </div>
     <div class="container">
       Main Page
