--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <script>
       $(function(){
-        $("#includedContent").load("b.html");
+        $("#includedContent").load("navbar.html");
       });
     </script>
   </head>
