--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>StreamerDex - Build your Network!</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="js/bootstrap.min.js" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   </head>
   <body>
     <div class="container" id="includedContent">
