--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       $("#navbarDiv").load("navbar.html");
     });
     $(function(){
-      $("#contentDiv").load("navbar.html");
+      $("#contentDiv").load("main.html");
     });
   </script>
 </html>
