--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
   </body>
 
   <script>
+    $("#home").click(function() {
+      alert('home clicked');
+    });
+
+    $("#link").click(function() {
+      alert('link clicked');
+    });
     $(function(){
       $("#navbarDiv").load("navbar.html");
     });
