--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       $("#contentDiv").load("main.html");
     });
 
-    $("#link").click(function() {
+    $("#mygroups").click(function() {
       $("#contentDiv").load("mygroups.html");
     });
     $(function(){
