--- a/navbar.html
+++ b/navbar.html
@@ -10,7 +10,7 @@
         <a id="home" class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a id="link" class="nav-link" href="#">Link</a>
+        <a id="mygroups" class="nav-link" href="mygroups.html">My Groups</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
