--- a/index.html
+++ b/index.html
@@ -28,5 +28,9 @@
     $("#mygroups").click(function() {
       $("#contentDiv").load("mygroups.html");
     });
+    $(".navlink > a").click(function() {              // when clicking any of these links
+      $(".navlink > a").removeClass("active");     // remove highlight from all links
+      $(this).addClass("active");                 // add highlight to clicked link
+    })
   </script>
 </html>
