--- a/navbar.html
+++ b/navbar.html
@@ -7,10 +7,10 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a id="home" class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a id="navlinkhome" class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a id="mygroups" class="nav-link" href="#">My Groups</a>
+        <a id="navlinkmygroups" class="nav-link" href="#">My Groups</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
