--- a/navbar.html
+++ b/navbar.html
@@ -7,7 +7,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a id="navlinkhome" class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a id="navlinkhome" class="nav-link" href="#">Home</a>
       </li>
       <li class="nav-item">
         <a id="navlinkmygroups" class="nav-link" href="#">My Groups</a>
