--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     $("#mygroups").click(function() {
       $("#contentDiv").load("mygroups.html");
     });
-    $(".navlink > a").click(function() {              // when clicking any of these links
-      $(".navlink > a").removeClass("active");     // remove highlight from all links
+    $(".nav-link > a").click(function() {              // when clicking any of these links
+      $(".nav-link > a").removeClass("active");     // remove highlight from all links
       $(this).addClass("active");                 // add highlight to clicked link
     })
   </script>
