--- a/navbar.html
+++ b/navbar.html
@@ -7,10 +7,16 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a id="navlinkhome" class="nav-link" href="#">Home</a>
+        <a id="home" class="nav-link" href="#">Home</a>
       </li>
       <li class="nav-item">
-        <a id="navlinkmygroups" class="nav-link" href="#">My Groups</a>
+        <a id="mygroups" class="nav-link" href="#">My Groups</a>
+      </li>
+      <li class="nav-item">
+        <a id="mynetwork" class="nav-link" href="#">My Network</a>
+      </li>
+      <li class="nav-item">
+        <a id="inbox" class="nav-link" href="#">Inbox</a>
       </li>
     </ul>
   </div>
