--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     $(function(){
       $("#navbarDiv").load("navbar.html");
     });
-    $(function(){
+/**    $(function(){
       $("#contentDiv").load("main.html");
     });
-/**    $("#home").click(function() {
+    $("#home").click(function() {
       $("#contentDiv").load("main.html");
     });
     $("#mygroups").click(function() {
