--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     $(function(){
       $("#navbarDiv").load("navbar.html");
     });
-/**    $(function(){
+    $(function(){
       $("#contentDiv").load("main.html");
     });
     $("#home").click(function() {
