--- a/navbar.html
+++ b/navbar.html
@@ -6,7 +6,7 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+      <li class="nav-item">
         <a id="home" class="nav-link" href="#">Home</a>
       </li>
       <li class="nav-item">
