--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     $(function(){
       $("#contentDiv").load("main.html");
     });
-/**    $("#home").click(function() {
+    $("#home").click(function() {
       $("#contentDiv").load("main.html");
     });
     $("#mygroups").click(function() {
@@ -31,6 +31,6 @@
     $(".nav-item > a").click(function() {              // when clicking any of these links
       $(".nav-item > a").removeClass("active");     // remove highlight from all links
       $(this).addClass("active");                 // add highlight to clicked link
-    }) */
+    })
   </script>
 </html>
