--- a/mynetworks.html
+++ b/mynetworks.html
@@ -1,1 +1,24 @@
-My Networks
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>StreamerDex - Build your Network!</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="js/bootstrap.js" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+  </head>
+  <body>
+    <div class="container" id="navbarDiv">
+    </div>
+    <div class="container" id="contentDiv">
+      My Networks
+    </div>
+  </body>
+
+  <script>
+    $(function(){
+      $("#navbarDiv").load("navbar.html");
+    });
+  </script>
+</html>
