--- a/navbar.html
+++ b/navbar.html
@@ -7,16 +7,16 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a id="home" class="nav-link" href="#">Home</a>
+        <a id="home" class="nav-link" href="index.html">Home</a>
       </li>
       <li class="nav-item">
-        <a id="mygroups" class="nav-link" href="#">My Groups</a>
+        <a id="mygroups" class="nav-link" href="mygroups.html">My Groups</a>
       </li>
       <li class="nav-item">
-        <a id="mynetwork" class="nav-link" href="#">My Network</a>
+        <a id="mynetwork" class="nav-link" href="mynetworks.html">My Network</a>
       </li>
       <li class="nav-item">
-        <a id="inbox" class="nav-link" href="#">Inbox</a>
+        <a id="inbox" class="nav-link" href="inbox.html">Inbox</a>
       </li>
     </ul>
   </div>
