removed class=container

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   </head>
   <body>
-    <div class="container" id="navbarDiv">
+    <div id="navbarDiv">
     </div>
-    <div class="container" id="contentDiv">
+    <div id="contentDiv">
       Main Content
     </div>
   </body>
