--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   </head>
   <body>
-    <div id="navbarDiv">
+    <div class="container-fluid" id="navbarDiv">
     </div>
-    <div id="contentDiv">
+    <div class="container-fluid" id="contentDiv">
       Main Content
     </div>
   </body>
