--- a/mygroups.html
+++ b/mygroups.html
@@ -9,9 +9,9 @@
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   </head>
   <body>
-    <div class="container" id="navbarDiv">
+    <div class="container-fluid" id="navbarDiv">
     </div>
-    <div class="container" id="contentDiv">
+    <div class="container-fluid" id="contentDiv">
       My Groups
     </div>
   </body>
