--- a/inbox.html
+++ b/inbox.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>StreamerDex - Build your Network!</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
     <link href="js/bootstrap.js" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   </head>
