added wrapper div

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
   <body>
     <div class="container-fluid" id="navbarDiv">
     </div>
-    <div class="container-fluid" id="contentDiv">
-      Main Content
+    <div class="container" id="wrapper">
+      <div class="container-fluid" id="contentDiv">
+        Main Content
+      </div>
     </div>
   </body>
 
