--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   </head>
   <body>
-    <div class="container-fluid" id="navbarDiv">
+    <div class="container-navbar" id="navbarDiv">
     </div>
-    <div class="container" id="wrapper">
+    <div class="container-wrapper" id="wrapper">
       <div class="container-fluid" id="contentDiv">
         Main Content
       </div>
