--- a/mygroups.html
+++ b/mygroups.html
@@ -11,8 +11,10 @@
   <body>
     <div class="container-fluid" id="navbarDiv">
     </div>
-    <div class="container-fluid" id="contentDiv">
-      My Groups
+    <div class="container-wrapper">
+      <div class="container-fluid" id="contentDiv">
+        My Groups
+      </div>
     </div>
   </body>
 
