--- a/mynetworks.html
+++ b/mynetworks.html
@@ -11,8 +11,10 @@
   <body>
     <div class="container-fluid" id="navbarDiv">
     </div>
-    <div class="container-fluid" id="contentDiv">
-      My Networks
+    <div class="container-wrapper">
+      <div class="container-fluid" id="contentDiv">
+        My Networks
+      </div>
     </div>
   </body>
 
