--- a/profile.html
+++ b/profile.html
@@ -9,10 +9,12 @@
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   </head>
   <body>
-    <div class="container-fluid" id="navbarDiv">
+    <div class="container-navbar" id="navbarDiv">
     </div>
-    <div class="container-fluid" id="contentDiv">
-      My Profile
+    <div class="container-wrapper">
+      <div class="container-fluid" id="contentDiv">
+        My Profile
+      </div>
     </div>
   </body>
 
